<resources>
    <string name="app_name">Clean-O-Waste</string>
    <string name="login">Login</string>
    <string name="nav_search_subject">Search</string>
    <string name="nav_help">Help</string>
    <string name="contact_us">Contact us</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register_button">Register Now!</string>
    <string name="register">Registration</string>
    <string name="admission_login">Login</string>
    <string name="user_name">UserName</string>
    <string name="your_password">Password</string>
    <string name="navigation_drawer_open">Open Nav Bar</string>
    <string name="navigation_drawer_close">Close Nav Bar</string>
    <string name="profile">Profile</string>
    <string name="mobile">Mobile</string>
    <string name="city">City</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="heading_user_profile">User Profile</string>
    <string name="heading_change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="heading_new_post">New Post</string>
    <string name="postTitle">Title</string>
    <string name="postCategory">Category</string>
    <string name="postDescription">Description</string>
    <string name="postTime">Time</string>
    <string name="postAddress">Address</string>
    <string name="postLocation">Locality</string>
    <string name="postedBy">Posted By</string>
    <string name="hint_postTitle">Enter Post Title</string>
    <string name="hint_postDescription">Description</string>
    <string name="hint_postRate">Enter price</string>
    <string name="hint_postAddress">Enter Address</string>
    <string name="editPost">Edit</string>
    <string name="deletePost">Delete</string>
    <string name="permission_needed">Please grant Camera / file storage permission to function Setu App properly.</string>
    <string name="home_heading">List of Complaints</string>
    <string name="select_city">Select City</string>
    <string name="no_network">No active Internet connection found. Please check your network connection and try again.</string>
    <string name="info">Information</string>
    <string name="postPic">Select Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="heading_edit_post">Edit Post</string>
    <string name="hint_postCity">City</string>
    <string name="hint_postLocation">Location</string>
    <string name="postCity">City</string>
    <string name="postRate">Rate</string>
    <string name="nav_admin_login">Admin Login</string>
    <string name="logout">Logout</string>
    <string name="showPost">Show Post</string>
    <string name="hidePost">Hide Post</string>
    <string name="postDate">Timing</string>
    <string name="hint_landmark">Enter landmark (optional)</string>
    <string name="about">About Us</string>
    <string name="team">Our team </string>
</resources>
