<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Home" />
            <!--android:title="@string/login" />-->
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="Login" />
            <!--android:title="@string/login" />-->
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_register"
            android:title="Register" />
            <!--android:title="@string/nav_search_subject" />-->
        <item
            android:id="@+id/nav_admin_login"
            android:icon="@drawable/ic_admin_logo"
            android:title="@string/nav_admin_login" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_about_team"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/team" />

    </group>
</menu>
