<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_small"
    android:background="@color/colorWhite"
    android:padding="@dimen/margin_small">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/postTitle"
                android:layout_gravity="center"
                android:gravity="center|left"/>

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center"
                android:gravity="center|left"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/postLocation"
                android:layout_gravity="center"
                android:gravity="center|left"/>

            <TextView
                android:visibility="visible"
                android:id="@+id/txtLocality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center"
                android:gravity="center|left"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/postDate"
                android:layout_gravity="center"
                android:gravity="center|left"/>

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center"
                android:gravity="center|left"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/showPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/themeColorGreen"
                android:text="@string/showPost"
                android:textAllCaps="false"
                android:layout_margin="@dimen/margin_small"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/hidePost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/margin_small"
                android:background="@color/themeColorYellow"
                android:text="@string/hidePost"
                android:textAllCaps="false"
                android:textColor="@color/themeColorGreen" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>







